--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rdma-core (46.1-1) unstable; urgency=low
+
+  * New upstream release.
+
+ -- Nicolas Morey <nmorey@suse.com>  Tue, 18 Jul 2023 10:06:58 +0200
+
 rdma-core (46.0-1) unstable; urgency=medium
 
   * New upstream release.
