--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rdma-core (47.1-1) unstable; urgency=low
+
+  * New upstream release.
+
+ -- Nicolas Morey <nmorey@suse.com>  Thu, 21 Sep 2023 09:44:15 +0200
+
 rdma-core (47.0-1) unstable; urgency=medium
 
   * New upstream release.
