--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rdma-core (44.5-1) unstable; urgency=low
+
+  * New upstream release.
+
+ -- Nicolas Morey <nmorey@suse.com>  Mon, 22 Jan 2024 14:59:36 +0100
+
 rdma-core (44.4-1) unstable; urgency=low
 
   * New upstream release.
