--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rdma-core (48.1-1) unstable; urgency=low
+
+  * New upstream release.
+
+ -- Nicolas Morey <nmorey@suse.com>  Mon, 22 Jan 2024 14:59:37 +0100
+
 rdma-core (48.0-1) unstable; urgency=medium
 
   * New upstream release.
