librdmacm/cmtime: Add option to control number of threads
Add a command line argument to set the number of threads
assigned to a work queue.

Signed-off-by: Sean Hefty <shefty@nvidia.com>

--- a/librdmacm/man/cmtime.1
+++ b/librdmacm/man/cmtime.1
@@ -57,6 +57,11 @@ The server's port number.
 The first QP number to use when creating connections without allocating
 hardware QPs.  The test will use the values between base_qpn and base_qpn
 plus connections when connecting.  (default 1000)
+.TP
+\-n num_threads
+Sets the number of threads to spawn used to process connection events
+and hardware operations.  (default 1)
+.TP
 \-m mimic_qp_delay_us
 "Simulates" QP creation and modify calls by replacing them with a
 simple sleep function instead.  This allows testing the CM at larger
