librdmacm/cmtime: Add socket connection rate test option
To provide a reasonable baseline, add an option to connect over
tcp sockets instead of RDMA.  (The author was unable to find a
suitable connection rate test for sockets.  However, since this
is just to provide something to compare against, the code is
fairly simple.)

Signed-off-by: Sean Hefty <shefty@nvidia.com>

--- a/librdmacm/man/cmtime.1
+++ b/librdmacm/man/cmtime.1
@@ -71,6 +71,11 @@ configuration settings, if HW resources needed to be allocated.
 \-r retries
 Number of retries when resolving address or route.  (default 2)
 .TP
+\-S
+Run connection rate test using sockets.  This provides a baseline
+comparison of RDMA connections versus TCP connections.  Sockets are
+set to blocking mode.
+.TP
 \-t timeout_ms
 Timeout in millseconds (ms) when resolving address or
 route.  (default 2000 - 2 seconds)
