--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rdma-core (41.7-1) unstable; urgency=low
+
+  * New upstream release.
+
+ -- Nicolas Morey <nmorey@suse.com>  Wed, 29 May 2024 17:11:27 +0200
+
 rdma-core (41.6-1) unstable; urgency=low
 
   * New upstream release.
