--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rdma-core (50.1-1) unstable; urgency=low
+
+  * New upstream release.
+
+ -- Nicolas Morey <nmorey@suse.com>  Wed, 29 May 2024 17:11:29 +0200
+
 rdma-core (50.0-1) unstable; urgency=medium
 
   * New upstream release.
