--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rdma-core (52.0-1) unstable; urgency=medium
+
+  * New upstream release.
+
+ -- Benjamin Drung <bdrung@ubuntu.com>  Mon, 03 Jun 2024 11:07:43 +0200
+
 rdma-core (50.0-2) unstable; urgency=medium
 
   * Rename libraries for 64-bit time_t transition (Closes: #1064313)
