--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rdma-core (52.0-2) unstable; urgency=medium
+
+  * Exclude hns provider on archs without coherent DMA (Closes: #1073050)
+
+ -- Benjamin Drung <bdrung@ubuntu.com>  Thu, 27 Jun 2024 13:49:34 +0200
+
 rdma-core (52.0-1) unstable; urgency=medium
 
   * New upstream release.
