--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rdma-core (30.14-1) unstable; urgency=low
+
+  * New upstream release.
+
+ -- Nicolas Morey <nmorey@suse.com>  Tue, 08 Oct 2024 08:20:49 +0200
+
 rdma-core (30.13-1) unstable; urgency=low
 
   * New upstream release.
