--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rdma-core (47.4-1) unstable; urgency=low
+
+  * New upstream release.
+
+ -- Nicolas Morey <nmorey@suse.com>  Tue, 08 Oct 2024 08:21:08 +0200
+
 rdma-core (47.3-1) unstable; urgency=low
 
   * New upstream release.
