--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rdma-core (50.2-1) unstable; urgency=low
+
+  * New upstream release.
+
+ -- Nicolas Morey <nmorey@suse.com>  Tue, 08 Oct 2024 08:21:10 +0200
+
 rdma-core (50.1-1) unstable; urgency=low
 
   * New upstream release.
