--- a/libibumad/man/umad_get_ca_pair_by_name.3
+++ b/libibumad/man/umad_get_ca_pair_by_name.3
@@ -1,18 +1,18 @@
 .\" -*- nroff -*-
 .\" Licensed under the OpenIB.org BSD license (FreeBSD Variant) - See COPYING.md
 .\"
-.TH UMAD_GET_CAS_PAIRS 3  "May 21, 2007" "OpenIB" "OpenIB Programmer's Manual"
+.TH UMAD_GET_SMI_GSI_PAIR_BY_CA_NAME 3  "May 21, 2007" "OpenIB" "OpenIB Programmer's Manual"
 .SH "NAME"
-umad_get_ca_pair_by_name \- get SMI/GSI pair ca and port nums based on device name and portnum.
+umad_get_smi_gsi_pair_by_ca_name \- get SMI/GSI pair ca and port nums based on device name and portnum.
  the given portnum addresses a port in the given device name (might be smi or gsi).
 .SH "SYNOPSIS"
 .nf
 .B #include <infiniband/umad.h>
 .sp
-.BI "int umad_get_ca_pair_by_name(const char * " "devname" ", uint8_t " "portnum" ", umad_ca_pair_t " "*ca" );
+.BI "int umad_get_smi_gsi_pair_by_ca_name(const char * " "devname" ", uint8_t " "portnum" ", umad_ca_pair_t " "*ca" );
 .fi
 .SH "DESCRIPTION"
-.B umad_get_ca_pair_by_name()
+.B umad_get_smi_gsi_pair_by_ca_name()
 fills argument
 .I ca
 with found ca according to name and portnum given in
@@ -51,7 +51,7 @@ typedef struct umad_ca_pair_item {
 .PP
 
 .SH "RETURN VALUE"
-.B umad_get_ca_pair_by_name()
+.B umad_get_smi_gsi_pair_by_ca_name()
 returns 0 if a device and ports were found, 1 otherwise
 
 .SH "AUTHORS"
