--- a/libibumad/man/umad_get_cas_pairs.3
+++ b/libibumad/man/umad_get_cas_pairs.3
@@ -1,17 +1,17 @@
 .\" -*- nroff -*-
 .\" Licensed under the OpenIB.org BSD license (FreeBSD Variant) - See COPYING.md
 .\"
-.TH UMAD_GET_CAS_PAIRS 3  "May 21, 2007" "OpenIB" "OpenIB Programmer's Manual"
+.TH UMAD_GET_SMI_GSI_PAIRS 3  "May 21, 2007" "OpenIB" "OpenIB Programmer's Manual"
 .SH "NAME"
-umad_get_cas_pairs \- get cas as SMI/GSI pairs
+umad_get_smi_gsi_pairs \- get cas as SMI/GSI pairs
 .SH "SYNOPSIS"
 .nf
 .B #include <infiniband/umad.h>
 .sp
-.BI "int umad_get_cas_pairs(umad_ca_pair_t " "cas[]" ", size_t " "max" );
+.BI "int umad_get_smi_gsi_pairs(umad_ca_pair_t " "cas[]" ", size_t " "max" );
 .fi
 .SH "DESCRIPTION"
-.B umad_get_cas_pairs()
+.B umad_get_smi_gsi_pairs()
 fill a user allocated array of struct
 .I umad_ca_pair\fr
 it fills up to
@@ -47,7 +47,7 @@ typedef struct umad_ca_pair_item {
 .PP
 
 .SH "RETURN VALUE"
-.B umad_get_cas_pairs()
+.B umad_get_smi_gsi_pairs()
 returns the number of devices filled,
 or -1 on error.
 
