--- a/libibumad/man/umad_get_smi_gsi_pair_by_ca_name.3
+++ b/libibumad/man/umad_get_smi_gsi_pair_by_ca_name.3
@@ -1,70 +1,54 @@
-.\" -*- nroff -*-
-.\" Licensed under the OpenIB.org BSD license (FreeBSD Variant) - See COPYING.md
-.\"
-.TH UMAD_GET_SMI_GSI_PAIR_BY_CA_NAME 3 "May 21, 2007" "OpenIB" "OpenIB Programmer's Manual"
-.SH NAME
-.B umad_get_smi_gsi_pair_by_ca_name \-
-Retrieve SMI/GSI pair information based on device name and port number
-.SH SYNOPSIS
-.nf
-.B #include <infiniband/umad.h>
-.sp
-.BI "int umad_get_smi_gsi_pair_by_ca_name(const char * " "devname" ", uint8_t " "portnum" ", struct umad_ca_pair " "*ca" );
-.fi
-.SH DESCRIPTION
-.B umad_get_smi_gsi_pair_by_ca_name()
-fills the provided
-.I ca
-structure with the SMI and GSI pair information for the specified device name and port number.
+.. -*- rst -*-
+.. Licensed under the OpenIB.org BSD license (FreeBSD Variant) - See COPYING.md
 
-The
-.I devname
-parameter specifies the name of the device, and
-.I portnum
-is the associated port number.
+umad_get_smi_gsi_pair_by_ca_name(3)
+===================================
 
-The
-.I struct umad_ca_pair
-is defined in
-.I <infiniband/umad.h>
-and includes the following members:
-.PP
-.nf
-struct umad_ca_pair {
-.in +4
-char smi_name[UMAD_CA_NAME_LEN];
-.in +4
-\" Name of the SMI
-.in -4
-uint32_t smi_preferred_port;
-.in +4
-\" Preferred port for the SMI
-.in -4
-char gsi_name[UMAD_CA_NAME_LEN];
-.in +4
-\" Name of the GSI
-.in -4
-uint32_t gsi_preferred_port;
-.in +4
-\" Preferred port for the GSI
-.in -8
-};
-.fi
-.PP
-The function populates this structure with the relevant data for the given
-.I devname
-and
-.I portnum.
-.SH RETURN VALUE
-.B umad_get_smi_gsi_pair_by_ca_name()
-returns:
-.TP
-0
-If the specified device and port are found and the structure is successfully populated.
-.TP
-1
-If no matching device or port is found.
-.SH AUTHORS
-.TP
-Asaf Mazor <amazor@nvidia.com>
+Retrieve SMI/GSI pair information based on device name and port number.
 
+Synopsis
+--------
+
+.. code-block:: c
+
+    #include <infiniband/umad.h>
+
+    int umad_get_smi_gsi_pair_by_ca_name(const char *devname, uint8_t portnum, struct umad_ca_pair *ca);
+
+Description
+-----------
+
+``umad_get_smi_gsi_pair_by_ca_name()`` fills the provided ``ca`` structure with the SMI and GSI pair information
+for the specified device name and port number.
+
+The ``devname`` parameter specifies the name of the device, and ``portnum`` is the associated port number.
+
+The ``struct umad_ca_pair`` is defined in ``<infiniband/umad.h>`` and includes the following members:
+
+.. code-block:: c
+
+    struct umad_ca_pair {
+        char smi_name[UMAD_CA_NAME_LEN];
+        /* Name of the SMI */
+        uint32_t smi_preferred_port;
+        /* Preferred port for the SMI */
+        char gsi_name[UMAD_CA_NAME_LEN];
+        /* Name of the GSI */
+        uint32_t gsi_preferred_port;
+        /* Preferred port for the GSI */
+    };
+
+The function populates this structure with the relevant data for the given ``devname`` and ``portnum``.
+
+Return Value
+------------
+
+``umad_get_smi_gsi_pair_by_ca_name()`` returns:
+
+- **0**: If the specified device and port are found and the structure is successfully populated.
+- **1**: If no matching device or port is found.
+
+Authors
+-------
+
+- Asaf Mazor <amazor@nvidia.com>
