--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rdma-core (33.15-1) unstable; urgency=low
+
+  * New upstream release.
+
+ -- Nicolas Morey <nmorey@suse.com>  Wed, 22 Jan 2025 12:15:49 +0100
+
 rdma-core (33.14-1) unstable; urgency=low
 
   * New upstream release.
